--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-rQkG0w9kAxgqa6PMImcyRwJL8M1WS0XOkSrBL7aKqeD9yB8NMPMZHEdFxk+q7hHVxP5AJedqT+lvAMJEm+guvQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       margin: 0;
@@ -109,7 +110,7 @@
 <body>
   <header>
     <div>Finance Point</div>
-    <button id="logoutBtn" class="logout-icon" title="Logout">🔒</button>
+    <button id="logoutBtn" class="logout-icon" title="Logout"><i class="fas fa-sign-out-alt"></i></button>
   </header>  <div class="welcome-box" id="welcome">Welcome</div>  <main>
     <section class="card">
       <h2>Finance Tip of the Day</h2>
@@ -124,17 +125,17 @@
       <p>The concept of compound interest was described by Einstein as the 8th wonder of the world.</p>
     </section>
     <section class="card">
-      <h2>🎉 Birthday Wall</h2>
+      <h2><i class="fas fa-birthday-cake"></i> Birthday Wall</h2>
       <div class="media-box">
-        <img src="https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/birthday-sample.jpg" alt="Celebrant">
+        <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e" alt="Celebrant">
         <strong>Bolu Oluwaseun</strong>
         <p>Happy Birthday! Wishing you a year full of success and blessings.</p>
       </div>
     </section>
     <section class="card">
-      <h2>📢 Advert Placement</h2>
+      <h2><i class="fas fa-bullhorn"></i> Advert Placement</h2>
       <div class="media-box">
-        <img src="https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/sample-ad.png" alt="Ad">
+        <img src="https://images.unsplash.com/photo-1542744094-3a31f272c490" alt="Ad">
         <strong>Finance Wears Hub</strong>
         <p>Custom branded wears and souvenirs for AAUA Finance students. Fast delivery and great quality!</p>
         <a href="#">Visit Store</a>
