--- a/home.html
+++ b/home.html
@@ -2,154 +2,176 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign In</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Finance Point - Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #000;
-      background-image: url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: #000 url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif') no-repeat center center/cover;
+      color: #fff;
     }
-    .login-container {
-      background-color: rgba(20, 20, 20, 0.88);
-      padding: 30px;
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100vh;
+      background: rgba(20, 20, 20, 0.95);
+      padding-top: 60px;
+      display: none;
+    }
+    .sidebar a {
+      display: block;
+      color: gold;
+      padding: 15px 20px;
+      text-decoration: none;
+      font-size: 16px;
+    }
+    .sidebar a:hover {
+      background: rgba(255, 215, 0, 0.1);
+    }
+    .top-bar {
+      background: rgba(20, 20, 20, 0.9);
+      padding: 15px;
+      text-align: center;
+      font-size: 22px;
+      font-weight: bold;
+      color: gold;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+    .logout {
+      position: absolute;
+      right: 20px;
+      top: 15px;
+      font-size: 18px;
+      cursor: pointer;
+      color: gold;
+    }
+    .welcome-box {
+      text-align: center;
+      margin: 30px auto;
+      background: rgba(20, 20, 20, 0.85);
+      width: 90%;
+      max-width: 700px;
+      padding: 20px;
       border-radius: 12px;
       box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
-      max-width: 400px;
+    }
+    .section {
+      margin: 30px auto;
       width: 90%;
-      text-align: center;
+      max-width: 700px;
+      background: rgba(20, 20, 20, 0.88);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
     }
-    h2 {
+    .section h3 {
       color: gold;
-      margin-bottom: 20px;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: gold;
-      color: #000;
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    button:hover {
-      background-color: #ffd700;
-    }
-    .bottom-link {
-      color: #ccc;
-      margin-top: 15px;
-      font-size: 0.9rem;
-    }
-    .bottom-link a {
-      color: gold;
-      text-decoration: none;
-    }
-    .toast {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background-color: #222;
-      color: gold;
-      padding: 12px 20px;
-      border-radius: 6px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.6);
-      display: none;
-      z-index: 999;
-    }
-    /* Responsive Navigation */
-    .bottom-nav, .side-nav {
-      position: fixed;
-      background-color: #111;
-      z-index: 999;
+      margin-bottom: 10px;
+      border-bottom: 1px solid gold;
+      padding-bottom: 5px;
     }
     .bottom-nav {
-      bottom: 0;
-      width: 100%;
       display: flex;
       justify-content: space-around;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: rgba(20, 20, 20, 0.95);
       padding: 10px 0;
-      display: none;
     }
-    .bottom-nav a, .side-nav a {
+    .bottom-nav a {
       color: gold;
+      font-size: 18px;
       text-decoration: none;
-      font-size: 0.85rem;
+      text-align: center;
+    }
+    .card {
+      background: #111;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 8px;
+      color: #ccc;
+    }
+    .birthday-card, .ad-card {
       display: flex;
       flex-direction: column;
       align-items: center;
+      background: #111;
+      padding: 10px;
+      border-radius: 8px;
+      margin-bottom: 10px;
     }
-    .bottom-nav a i, .side-nav a i {
-      font-size: 1.3rem;
+    .birthday-card img, .ad-card img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
     }
-    .side-nav {
-      left: 0;
-      top: 0;
-      height: 100vh;
-      width: 60px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 20px;
-      display: none;
+    .birthday-card h4, .ad-card h4 {
+      margin: 10px 0 5px;
+      color: gold;
     }
-    .side-nav a {
-      margin: 20px 0;
+    .ad-card a {
+      color: #00f7ff;
+      text-decoration: underline;
     }
-    @media (max-width: 768px) {
-      .bottom-nav { display: flex; }
-    }
-    @media (min-width: 769px) {
-      .side-nav { display: flex; }
+    @media (min-width: 768px) {
+      .sidebar { display: block; }
+      .bottom-nav { display: none; }
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Sign In</h2>
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <div class="bottom-link" style="text-align: right; margin-top: -5px;">
-      <a href="#" onclick="forgotPassword()">Forgot Password?</a>
-    </div>
-    <button onclick="loginUser()">Sign In</button>
-    <div class="bottom-link">New here? <a href="signup.html">Create account</a></div>
+  <div class="top-bar">
+    Finance Point
+    <span class="logout" onclick="logoutUser()"><i class="fas fa-sign-out-alt"></i></span>
   </div>
-  <div class="toast" id="toast"></div>  <!-- Bottom Navigation -->  <div class="bottom-nav">
-    <a href="home.html"><i class="fas fa-home"></i><span>Home</span></a>
-    <a href="executives.html"><i class="fas fa-user-tie"></i><span>Executives</span></a>
-    <a href="announcements.html"><i class="fas fa-bullhorn"></i><span>News</span></a>
-    <a href="events.html"><i class="fas fa-calendar-alt"></i><span>Events</span></a>
-    <a href="downloads.html"><i class="fas fa-download"></i><span>Downloads</span></a>
-  </div>  <!-- Sidebar Navigation -->  <div class="side-nav">
-    <a href="home.html" title="Home"><i class="fas fa-home"></i></a>
-    <a href="executives.html" title="Executives"><i class="fas fa-user-tie"></i></a>
-    <a href="announcements.html" title="News"><i class="fas fa-bullhorn"></i></a>
-    <a href="events.html" title="Events"><i class="fas fa-calendar-alt"></i></a>
-    <a href="downloads.html" title="Downloads"><i class="fas fa-download"></i></a>
-    <a href="logout.html" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
+  <div class="sidebar">
+    <a href="home.html"><i class="fas fa-home"></i> Home</a>
+    <a href="downloads.html"><i class="fas fa-download"></i> Downloads</a>
+    <a href="cbt.html"><i class="fas fa-pen"></i> CBT</a>
+    <a href="leaderboard.html"><i class="fas fa-trophy"></i> Leaderboard</a>
+    <a href="feedback.html"><i class="fas fa-comment"></i> Feedback</a>
+  </div>  <div class="welcome-box">
+    <h2 id="welcomeText">Welcome, Student</h2>
+  </div>  <div class="section">
+    <h3>Finance Tips</h3>
+    <div class="card">Track your expenses daily to avoid overspending.</div>
+    <div class="card">Create a simple budget and stick to it.</div>
+  </div>  <div class="section">
+    <h3>Latest News</h3>
+    <div class="card">AAUA Finance Department's new academic calendar released.</div>
+    <div class="card">Upcoming seminar on Financial Literacy this Friday.</div>
+  </div>  <div class="section">
+    <h3>Birthday Wall</h3>
+    <div class="birthday-card">
+      <img src="https://i.imgur.com/7k12EPD.png" alt="celebrant" />
+      <h4>BOLUWATIFE AYUBA</h4>
+      <p>Happy Birthday! 🎉</p>
+    </div>
+  </div>  <div class="section">
+    <h3>Advert Placement</h3>
+    <div class="ad-card">
+      <img src="https://i.imgur.com/SZQ7KkN.jpg" alt="ad" />
+      <h4>Bliss Fast Food</h4>
+      <p>Delicious meals at affordable prices.</p>
+      <a href="#">Visit Us</a>
+    </div>
+  </div>  <div class="bottom-nav">
+    <a href="home.html"><i class="fas fa-home"></i></a>
+    <a href="downloads.html"><i class="fas fa-download"></i></a>
+    <a href="cbt.html"><i class="fas fa-pen"></i></a>
+    <a href="leaderboard.html"><i class="fas fa-trophy"></i></a>
+    <a href="feedback.html"><i class="fas fa-comment"></i></a>
   </div>  <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js';
-    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js';
-    import { getFirestore, getDoc, doc } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
+    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js';
+    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
@@ -164,58 +186,23 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    function showToast(message) {
-      const toast = document.getElementById("toast");
-      toast.textContent = message;
-      toast.style.display = "block";
-      setTimeout(() => toast.style.display = "none", 4000);
+    function logoutUser() {
+      signOut(auth).then(() => {
+        window.location.href = "login.html";
+      });
     }
 
-    window.loginUser = async function () {
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value;
-
-      if (!email || !password) return showToast("Please fill in all fields");
-
-      try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-
-        if (!user.emailVerified) {
-          showToast("Please verify your email before signing in");
-          return;
-        }
-
-        const userDoc = await getDoc(doc(db, "Users", user.uid));
+    onAuthStateChanged(auth, async (user) => {
+      if (user) {
+        const docRef = doc(db, "Users", user.uid);
+        const userDoc = await getDoc(docRef);
         if (userDoc.exists()) {
-          sessionStorage.setItem("userFullName", userDoc.data().fullName);
-          sessionStorage.setItem("userMatric", userDoc.data().matricNumber);
+          const data = userDoc.data();
+          document.getElementById("welcomeText").textContent = `Welcome, ${data.fullName.toUpperCase()} (${data.matricNumber})`;
         }
-
-        showToast("Sign in successful");
-        setTimeout(() => {
-          window.location.href = "home.html";
-        }, 3000);
-      } catch (error) {
-        let message = "Login failed";
-        if (error.code === "auth/wrong-password") message = "Incorrect password";
-        else if (error.code === "auth/user-not-found") message = "Email not found";
-        else if (error.code === "auth/invalid-email") message = "Invalid email format";
-        else message = error.message;
-        showToast(message);
+      } else {
+        window.location.href = "login.html";
       }
-    }
-
-    window.forgotPassword = async function () {
-      const email = prompt("Enter your registered email to reset password:");
-      if (!email) return;
-
-      try {
-        await sendPasswordResetEmail(auth, email);
-        showToast("Password reset link sent to your email");
-      } catch (error) {
-        showToast("Error: " + error.message);
-      }
-    }
+    });
   </script></body>
 </html>
