--- a/home.html
+++ b/home.html
@@ -219,10 +219,15 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    function logoutUser() {
-      signOut(auth).then(() => {
-        window.location.href = "login.html";
-      });
+    window.logoutUser = function () {
+      signOut(auth)
+        .then(() => {
+          alert("Signed out successfully!");
+          window.location.href = "login.html";
+        })
+        .catch((error) => {
+          console.error("Logout error:", error);
+        });
     }
 
     onAuthStateChanged(auth, async (user) => {
