--- a/home.html
+++ b/home.html
@@ -2,209 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FINANCE POINT</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Finance Point</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #000 url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif') no-repeat center center/cover;
-      color: #fff;
+      background: #000;
+      color: gold;
+      background-image: url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
     }
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 220px;
-      height: 100vh;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       background: rgba(20, 20, 20, 0.95);
-      padding-top: 60px;
-      display: none;
-    }
-    .sidebar a {
-      display: block;
-      color: gold;
-      padding: 15px 20px;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    .sidebar a.active {
-      background: rgba(255, 215, 0, 0.2);
-      color: #aaa;
-      pointer-events: none;
-    }
-    .top-bar {
-      background: rgba(20, 20, 20, 0.9);
-      padding: 15px;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-      color: gold;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-    }
-    .logout {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      font-size: 18px;
-      cursor: pointer;
-      color: gold;
-    }
-    .welcome-box {
-      text-align: center;
-      margin: 30px auto;
-      background: rgba(20, 20, 20, 0.85);
-      width: 90%;
-      max-width: 700px;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
-    }
-    .section {
-      margin: 30px auto;
-      width: 90%;
-      max-width: 700px;
-      background: rgba(20, 20, 20, 0.88);
-      border-radius: 12px;
-      padding: 20px;
+      padding: 15px 25px;
       box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
     }
-    .section h3 {
+    header h1 {
+      font-size: 1.8rem;
+      font-weight: bold;
+    }
+    #logoutBtn {
+      cursor: pointer;
+      background: none;
+      border: none;
       color: gold;
-      margin-bottom: 10px;
-      border-bottom: 1px solid gold;
-      padding-bottom: 5px;
+      font-size: 1.3rem;
     }
-    .section ul {
-      padding-left: 20px;
-    }
-    .section li {
-      margin-bottom: 10px;
-    }
-    .bottom-nav {
-      display: flex;
-      justify-content: space-around;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background: rgba(20, 20, 20, 0.95);
-      padding: 10px 0;
-    }
-    .bottom-nav a {
-      color: gold;
-      font-size: 18px;
-      text-decoration: none;
+    .welcome-box {
+      margin: 40px auto 20px;
+      background: rgba(30, 30, 30, 0.85);
+      width: fit-content;
+      padding: 20px 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px gold;
       text-align: center;
-      padding: 10px;
     }
-    .bottom-nav a.active {
-      color: #aaa;
-      pointer-events: none;
-    }
-    .card {
-      background: #111;
-      padding: 15px;
-      margin: 10px 0;
-      border-radius: 8px;
-      color: #ccc;
-    }
-    .birthday-card, .ad-card {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: #111;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-    .birthday-card img, .ad-card img {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      border-radius: 50%;
-    }
-    .birthday-card h4, .ad-card h4 {
-      margin: 10px 0 5px;
+    .toast {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: #222;
       color: gold;
-    }
-    .ad-card a {
-      color: #00f7ff;
-      text-decoration: underline;
-    }
-    @media (min-width: 768px) {
-      .sidebar { display: block; }
-      .bottom-nav { display: none; }
+      padding: 12px 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.6);
+      display: none;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <div class="top-bar">
-    FINANCE POINT
-    <span class="logout" onclick="logoutUser()"><i class="fas fa-sign-out-alt"></i></span>
-  </div>
 
-  <div class="sidebar">
-    <a href="home.html" class="active"><i class="fas fa-home"></i> Home</a>
-    <a href="downloads.html"><i class="fas fa-download"></i> Downloads</a>
-    <a href="cbt.html"><i class="fas fa-pen"></i> CBT</a>
-    <a href="leaderboard.html"><i class="fas fa-trophy"></i> Leaderboard</a>
-    <a href="feedback.html"><i class="fas fa-comment"></i> Feedback</a>
-  </div>
+  <header>
+    <h1>FINANCE POINT</h1>
+    <button id="logoutBtn" onclick="logoutUser()" title="Logout">🚪</button>
+  </header>
 
   <div class="welcome-box">
-    <h2 id="welcomeText">Welcome, Student</h2>
+    <h2 id="welcome">Welcome, Student</h2>
   </div>
 
-  <div class="section">
-    <h3>Finance Tips</h3>
-    <ul>
-      <li>Track your expenses daily to avoid overspending.</li>
-      <li>Create a simple budget and stick to it.</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>Latest News</h3>
-    <ul>
-      <li>AAUA Finance Department's new academic calendar released.</li>
-      <li>Upcoming seminar on Financial Literacy this Friday.</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>Birthday Wall</h3>
-    <div class="birthday-card">
-      <img src="https://i.imgur.com/7k12EPD.png" alt="celebrant" />
-      <h4>BOLUWATIFE AYUBA</h4>
-      <p>Happy Birthday!</p>
-    </div>
-  </div>
-
-  <div class="section">
-    <h3>Advert Placement</h3>
-    <div class="ad-card">
-      <img src="https://i.imgur.com/SZQ7KkN.jpg" alt="ad" />
-      <h4>Bliss Fast Food</h4>
-      <p>Delicious meals at affordable prices.</p>
-      <a href="#">Visit Us</a>
-    </div>
-  </div>
-
-  <div class="bottom-nav">
-    <a href="home.html" class="active"><i class="fas fa-home"></i></a>
-    <a href="downloads.html"><i class="fas fa-download"></i></a>
-    <a href="cbt.html"><i class="fas fa-pen"></i></a>
-    <a href="leaderboard.html"><i class="fas fa-trophy"></i></a>
-    <a href="feedback.html"><i class="fas fa-comment"></i></a>
-  </div>
+  <div class="toast" id="toast"></div>
 
   <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js';
-    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js';
-    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
@@ -217,31 +85,32 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getFirestore(app);
+
+    const welcome = document.getElementById("welcome");
+
+    const fullName = sessionStorage.getItem("userFullName");
+    if (fullName) {
+      welcome.textContent = `Welcome, ${fullName}`;
+    }
 
     window.logoutUser = function () {
       signOut(auth)
         .then(() => {
-          alert("Signed out successfully!");
-          window.location.href = "login.html";
+          window.location.href = "login.html?status=logout";
         })
         .catch((error) => {
-          console.error("Logout error:", error);
+          showToast("Logout failed: " + error.message);
         });
     }
 
-    onAuthStateChanged(auth, async (user) => {
-      if (user) {
-        const docRef = doc(db, "Users", user.uid);
-        const userDoc = await getDoc(docRef);
-        if (userDoc.exists()) {
-          const data = userDoc.data();
-          document.getElementById("welcomeText").textContent = `Welcome, ${data.fullName.toUpperCase()} (${data.matricNumber})`;
-        }
-      } else {
-        window.location.href = "login.html";
-      }
-    });
+    function showToast(msg) {
+      const toast = document.getElementById("toast");
+      toast.textContent = msg;
+      toast.style.display = "block";
+      setTimeout(() => {
+        toast.style.display = "none";
+      }, 4000);
+    }
   </script>
 </body>
 </html>
