--- a/events.html
+++ b/events.html
@@ -1,52 +1,140 @@
-
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FINHUB</title>
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>Events | Finance Point</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #000;
+      background-image: url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif');
+      background-size: cover;
+      background-position: center;
+      color: gold;
+      padding-bottom: 80px;
+    }
+    header {
+      background-color: rgba(20, 20, 20, 0.95);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 15px 20px;
+      box-shadow: 0 0 10px gold;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    header h1 {
+      font-size: 1.6rem;
+      font-weight: bold;
+    }
+    .container {
+      padding: 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+    .section h2 {
+      text-align: center;
+      margin-bottom: 15px;
+      border-bottom: 1px solid gold;
+      padding-bottom: 5px;
+    }
+    .event-card {
+      background-color: rgba(30, 30, 30, 0.88);
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
+    }
+    .event-card img {
+      width: 100%;
+      max-height: 250px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+    .event-card h3 {
+      margin: 10px 0 5px;
+      color: gold;
+    }
+    .event-card p {
+      color: #ddd;
+      font-size: 0.95rem;
+    }
+    .event-card .datetime {
+      font-size: 0.85rem;
+      color: #aaa;
+      margin-bottom: 10px;
+    }
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(20, 20, 20, 0.95);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      z-index: 100;
+    }
+    .bottom-nav a {
+      color: gold;
+      font-size: 1.4rem;
+      text-decoration: none;
+    }
+    .bottom-nav a.active {
+      opacity: 0.4;
+      pointer-events: none;
+    }
+    @media(min-width: 768px) {
+      .bottom-nav { display: none; }
+    }
+  </style>
 </head>
 <body>
-  <header style="background:#220033;padding:10px;text-align:center;">
-    <h1 style="color:#b37cd5;">FINHUB</h1>
-  </header>
+  <header>
+    <h1>Finance Point Events</h1>
+  </header>  <div class="container">
+    <div class="section">
+      <h2>Upcoming Events</h2>
+      <div class="event-card">
+        <img src="https://i.imgur.com/ApI2Q1B.jpg" alt="Event Flyer">
+        <h3>Annual Finance Summit</h3>
+        <div class="datetime"><i class="fas fa-calendar-alt"></i> Aug 20, 2025 • 10:00 AM</div>
+        <p>Join professionals and students as we explore global financial strategies and student innovations in tech finance.</p>
+      </div>
+      <div class="event-card">
+        <h3>Career Talk Session</h3>
+        <div class="datetime"><i class="fas fa-calendar-alt"></i> Sept 5, 2025 • 2:00 PM</div>
+        <p>Industry experts will guide you through career paths in investment banking, fintech, and audit firms.</p>
+      </div>
+    </div><div class="section">
+  <h2>Past Events</h2>
+  <div class="event-card">
+    <img src="https://i.imgur.com/ZbWW7VZ.jpg" alt="Past Event">
+    <h3>Finance Welcome Party</h3>
+    <div class="datetime"><i class="fas fa-calendar-alt"></i> June 10, 2025 • 5:00 PM</div>
+    <p>A fun evening of bonding, music, refreshments, and campus orientation for new students.</p>
+  </div>
+  <div class="event-card">
+    <h3>Financial Literacy Seminar</h3>
+    <div class="datetime"><i class="fas fa-calendar-alt"></i> May 18, 2025 • 12:00 PM</div>
+    <p>Special session on budgeting, saving, and avoiding Ponzi schemes, held by the department alumni group.</p>
+  </div>
+</div>
 
-  <nav style="background:#1a0033;display:flex;justify-content:space-around;padding:10px 0;">
-    <a href="index.html">Home</a>
-    <a href="announcements.html">Announcements</a>
-    <a href="events.html">Events</a>
-    <a href="downloads.html">Downloads</a>
-    <a href="ads.html">Ads</a>
-  </nav>
-
-  <main style="padding:20px;">
-    <h2>Events Page</h2>
-    <p>Your portal to Finance Department updates, materials, and opportunities.</p>
-  </main>
-
-  <footer style="background:#220033;text-align:center;padding:10px;margin-top:40px;color:#aaa;">
-    Contact PRO for Ads: 08142452729 | AAUA Finance Dept. © 2025
-  </footer>
-
-  
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.firebasestorage.app",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
-
+  </div>  <div class="bottom-nav">
+    <a href="home.html"><i class="fas fa-home"></i></a>
+    <a href="#" class="active"><i class="fas fa-calendar"></i></a>
+    <a href="downloads.html"><i class="fas fa-download"></i></a>
+    <a href="cbt.html"><i class="fas fa-question"></i></a>
+    <a href="feedback.html"><i class="fas fa-comment"></i></a>
+  </div>
 </body>
 </html>
